--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="#" id="title">Food,LLC</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-block d-sm-none">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-block d-sm-none text-center">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Chicken</a>
         </li>
